--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^12.19.3",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "axios": "^0.21.0",
+    "node-sass": "^4.14.1",
+    "randomatic": "^3.1.1",
+    "rc-slider": "^9.6.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.1",
+    "sha-1": "^1.0.0",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
